Fixed UI bug where the footer was covering a part of the popup modal

--- a/web-app/src/sass/pages/_review-submitted.scss
+++ b/web-app/src/sass/pages/_review-submitted.scss
@@ -47,30 +47,3 @@
 		}
 	}
 }
-
-// modal inner markup styling
-.ReactModalPortal {
-	.ReactModal__Content.ReactModal__Content--after-open {
-		width: 60%;
-		max-width: 550px;
-		height: 200px;
-	}
-	form {
-		input[type="tel"] {
-			width: 100%;
-			padding: 2px;
-		}
-		input[type="submit"] {
-			float: right;
-			margin-top: 5px;
-			padding: 5px;
-			padding-left: 15px;
-			padding-right: 15px;
-			background-color: $vize-blue;
-			border: 1px solid #d4d1d1;
-			outline: none;
-			color: white;
-			font-weight: bolder;
-		}
-	}
-}
