--- a/web-app/src/sass/responsive/_phones-only.scss
+++ b/web-app/src/sass/responsive/_phones-only.scss
@@ -76,15 +76,6 @@
 		}
 	}
 
-	.ReactModalPortal {
-		.ReactModal__Content.ReactModal__Content--after-open {
-			height: 250px;
-			form {
-				padding-top: 20px;
-			}
-		}
-	}
-
 	.forEmployees-header {
 		height: 530px;
 	}
